--- a/css/css.css
+++ b/css/css.css
@@ -1,28 +1,35 @@
 body{
    background-color: dimgrey;
 }
-h1{
-    text-align: center;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color: rgb(79, 18, 24);
-    font-size: xx-large;
-    margin-top: 4%;
+header{
+    color:#7d1313; 
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-size: x-large;
+    margin-left: 90%;
+    position: fixed;
+    
+
+}
+#titulo{
+  width: 50%;
+  margin-left: 25%;
+  margin-top: 10%;
 }
 
 h2{
     text-align: center;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    color: rgb(104, 42, 44);
+    color:#7d1313; 
     font-size: xx-large;
-    margin-top: 6%;
+    
 }
 
 h3{
     text-align: center;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    color: rgb(104, 42, 44);
+    color:#7d1313; 
     font-size: xx-large;
-    margin-top: 4%;
+
 }
 
 input{
@@ -32,9 +39,9 @@ input{
     font-size: xx-large;
     border-radius: 15px;
     margin-top: 2%;
-    margin-left: 38%;
+    margin-left: 36%;
     cursor: pointer;
-    background-color: rgb(104, 42, 44);
+    color:#7d1313; 
 }
 
 #irapantalla2{
@@ -43,7 +50,7 @@ input{
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     color: rgb(148, 113, 115);
     font-size: xx-large;
-    background-color: rgb(65, 3, 14);
+    color:#7d1313; 
     margin-top: 5%;
     margin-left: 45%;
     border-radius: 15px;
@@ -63,7 +70,7 @@ input{
 p{
     text-align: left;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    color: rgb(63, 6, 6);
+    color:#7d1313; 
     font-size: x-large;
     margin-top: 20%;
 }
