--- a/css/css.css
+++ b/css/css.css
@@ -10,6 +10,15 @@ header{
     
 
 }
+#pantalla1{
+ background-position: 100%;
+ height: 100%;
+ width: 100%;
+}
+
+#pantalla2{
+    display: none;
+}
 #titulo{
   width: 50%;
   margin-left: 25%;
