--- a/css/css.css
+++ b/css/css.css
@@ -17,7 +17,7 @@ header{
 }
 
 #pantalla2{
-    display: none;
+  
 }
 #titulo{
   width: 50%;
@@ -70,6 +70,24 @@ input{
     margin-top: 12%;
     width: 2.5%;
     margin-left: 0.5%;
+}
+
+#contenedor-de-tiempo{
+    display: flex;
+    text-align: center;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    color: rgb(148, 113, 115);
+    font-size: xx-large;
+    color:#7d1313; 
+    cursor: pointer;
+}
+
+#tiemporestante{
+    text-align: center;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-size: xx-large;
+    color:#7d1313; 
+    margin-left: 25%;
 }
 
 #bombadetiempo{
