--- a/css/css.css
+++ b/css/css.css
@@ -1,5 +1,5 @@
 body{
-   background-color: dimgrey;
+    background-repeat: no-repeat;
 }
 header{
     color:#7d1313; 
@@ -16,9 +16,6 @@ header{
  width: 100%;
 }
 
-#pantalla2{
-  
-}
 #titulo{
   width: 50%;
   margin-left: 25%;
@@ -44,11 +41,11 @@ h3{
 input{
     text-align: center;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    color: rgb(110, 87, 88);
+    background-color: rgb(226, 208, 209);
     font-size: xx-large;
     border-radius: 15px;
     margin-top: 2%;
-    margin-left: 36%;
+    margin-left: 38%;
     cursor: pointer;
     color:#7d1313; 
 }
@@ -57,7 +54,7 @@ input{
     display: flex;
     text-align: center;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    color: rgb(148, 113, 115);
+    background-color: rgb(226, 208, 209);
     font-size: xx-large;
     color:#7d1313; 
     margin-top: 5%;
@@ -65,6 +62,10 @@ input{
     border-radius: 15px;
     cursor: pointer;
 }
+
+#pantalla2{
+    margin-top: 20%;
+  }
 
 #bombita{
     margin-top: 12%;
@@ -76,10 +77,28 @@ input{
     display: flex;
     text-align: center;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    color: rgb(148, 113, 115);
     font-size: xx-large;
     color:#7d1313; 
-    cursor: pointer;
+   
+   
+}
+
+#cuentaregresiva{
+    margin-left: 2%;
+    margin-top: 1.5%;
+   font-weight: bolder;
+   color:#7d1313; 
+
+}
+
+#activarbomba{
+    border-radius: 15px;
+    background-color: rgb(226, 208, 209);
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-size: x-large;
+    color:#7d1313; 
+    margin-left: 2%;
+
 }
 
 #tiemporestante{
@@ -87,7 +106,7 @@ input{
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: xx-large;
     color:#7d1313; 
-    margin-left: 25%;
+    margin-left: 32%;
 }
 
 #bombadetiempo{
