--- a/css/css.css
+++ b/css/css.css
@@ -95,9 +95,9 @@ input{
     border-radius: 15px;
     background-color: rgb(226, 208, 209);
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    font-size: x-large;
+    font-size: large;
     color:#7d1313; 
-    margin-left: 2%;
+    margin-left: 4%;
 
 }
 
@@ -123,7 +123,7 @@ p{
 
 .contenedorcables{
     margin-top: 0%;
-    margin-left: 34%;
+    margin-left: 35%;
     display: flex;
    
 }
