--- a/css/css.css
+++ b/css/css.css
@@ -4,9 +4,10 @@ body{
 header{
     color:#7d1313; 
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    font-size: x-large;
+    font-size: xx-large;
     margin-left: 90%;
     position: fixed;
+    font-weight: bolder;
     
 
 }
@@ -92,10 +93,12 @@ input{
 }
 
 #activarbomba{
-    border-radius: 15px;
+    width: 10%;
+    border-radius: 70px;
     background-color: rgb(226, 208, 209);
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: large;
+    font-weight: bolder;
     color:#7d1313; 
     margin-left: 4%;
     cursor: pointer;
@@ -124,7 +127,7 @@ p{
 
 .contenedorcables{
     margin-top: 0%;
-    margin-left: 35%;
+    margin-left: 36%;
     display: flex;
    
 }
@@ -197,7 +200,7 @@ p{
 #cable9{
     height: 300px;
     width: 25px;
-   background: rgb(165, 42, 42);
+   background: #a52a2a;
    margin-left: 20px;
    cursor:pointer;
 }
@@ -205,10 +208,34 @@ p{
 #cable10{
     height: 300px;
     width: 25px;
-   background: rgb(50, 5, 5);
+   background: #320505;
    margin-left: 20px;
    cursor:pointer;
 }
 #ups{
     display: none;
+}
+
+#looser{
+    width: 40%;
+    margin-top: 5%;
+    margin-left: 30%;
+
+}
+
+#rip{
+    width: 60%;
+    margin-top: 2%;
+    margin-left: 21%;
+    margin-bottom: 5%;
+}
+
+#jugardenuevo{
+    font-size: xx-large;
+    width: 30%;
+    margin-left: 35%;
+    cursor: pointer;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    border-radius: 15px;
+
 }
