--- a/css/css.css
+++ b/css/css.css
@@ -277,6 +277,6 @@ p{
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     border-radius: 25px;
     background-color:lemonchiffon;
-    color: black;
-
+    color: #904c15;
+    border-color: #904c15;
 }
