--- a/css/css.css
+++ b/css/css.css
@@ -230,9 +230,36 @@ p{
 
 #looser{
     width: 40%;
-    margin-top: 5%;
+    margin-top: 2%;
     margin-left: 30%;
+    margin-bottom: 1%;
 
+}
+
+#rip{
+    width: 60%;
+    margin-top: 2%;
+    margin-left: 21%;
+    margin-bottom: 5%;
+}
+
+#jugardenuevol{
+    font-size: xx-large;
+    width: 30%;
+    margin-left: 35%;
+    cursor: pointer;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    border-radius: 25px;
+    background-color:black;
+    color: white;
+    margin-top: 1%;
+    margin-bottom: 1%;
+
+}
+
+
+#pantalla4{
+    display: none;
 }
 
 #winner{
@@ -249,26 +276,6 @@ p{
 
 }
 
-
-#rip{
-    width: 60%;
-    margin-top: 0%;
-    margin-left: 21%;
-    margin-bottom: 5%;
-}
-
-#jugardenuevol{
-    font-size: xx-large;
-    width: 30%;
-    margin-left: 35%;
-    cursor: pointer;
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    border-radius: 25px;
-    background-color:black;
-    color: white;
-
-}
-
 #jugardenuevo2{
     font-size: xx-large;
     width: 30%;
@@ -280,4 +287,3 @@ p{
     color: #904c15;
     border-color: #904c15;
 }
-
