--- a/css/css.css
+++ b/css/css.css
@@ -75,11 +75,17 @@ input{
     display: none;
   }
 
+#fondo2 {
+    width: 100%;
+    height: auto;
+} 
+
 #bombita{
     margin-top: 12%;
     width: 2.5%;
     margin-left: 0.5%;
 }
+
 
 #contenedor-de-tiempo{
     display: flex;
@@ -226,6 +232,14 @@ p{
 #pantalla3{
     display: none;
 }
+
+#fondo2{
+    background-position: 100%;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+   
+   }
 
 #looser{
     width: 40%;
