--- a/css/css.css
+++ b/css/css.css
@@ -78,12 +78,14 @@ input{
 #fondo2 {
     width: 100%;
     height: auto;
+    position: absolute;
 } 
 
 #bombita{
     margin-top: 12%;
     width: 2.5%;
     margin-left: 0.5%;
+    position: relative;
 }
 
 
@@ -93,6 +95,7 @@ input{
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: xx-large;
     color:#7d1313; 
+    position: relative;
    
    
 }
@@ -102,6 +105,7 @@ input{
     margin-top: 1.5%;
    font-weight: bolder;
    color:#7d1313; 
+   position: relative;
 
 }
 
@@ -115,6 +119,7 @@ input{
     color:#7d1313; 
     margin-left: 4%;
     cursor: pointer;
+    position: relative;
 
 }
 
@@ -124,11 +129,13 @@ input{
     font-size: xx-large;
     color:#7d1313; 
     margin-left: 32%;
+    position: relative;
 }
 
 #bombadetiempo{
     margin-left: 28%;
     width: 40%;
+    position: relative;
 }
 p{
     text-align: left;
@@ -136,12 +143,14 @@ p{
     color:#7d1313; 
     font-size: x-large;
     margin-top: 20%;
+    position: relative;
 }
 
 .contenedorcables{
     margin-top: 0%;
     margin-left: 36%;
     display: flex;
+    position: relative;
    
 }
 
@@ -152,6 +161,7 @@ p{
     width: 25px;
    background: brown;
    cursor:pointer;
+   position: relative;
 }
 
 #cable2{
@@ -160,6 +170,7 @@ p{
    background: rgb(131, 46, 46);
    margin-left: 20px;
    cursor:pointer;
+   position: relative;
 }
 
 #cable3{
@@ -168,6 +179,7 @@ p{
    background: rgb(177, 105, 105);
    margin-left: 20px;
    cursor:pointer;
+   position: relative;
 }
 
 #cable4{
@@ -176,6 +188,7 @@ p{
    background: rgb(57, 4, 4);
    margin-left: 20px;
    cursor:pointer;
+   position: relative;
 }
 
 #cable5{
@@ -184,6 +197,7 @@ p{
    background: rgb(219, 73, 73);
    margin-left: 20px;
    cursor:pointer;
+   position: relative;
 }
 
 #cable6{
@@ -192,6 +206,7 @@ p{
    background: rgb(182, 3, 3);
    margin-left: 20px;
    cursor:pointer;
+   position: relative;
 }
 
 #cable7{
@@ -200,6 +215,7 @@ p{
    background: rgb(74, 35, 35);
    margin-left: 20px;
    cursor:pointer;
+   position: relative;
 }
 
 #cable8{
@@ -208,6 +224,7 @@ p{
    background: rgb(170, 94, 94);
    margin-left: 20px;
    cursor:pointer;
+   position: relative;
 }
 
 #cable9{
@@ -216,6 +233,7 @@ p{
    background: #a52a2a;
    margin-left: 20px;
    cursor:pointer;
+   position: relative;
 }
 
 #cable10{
@@ -224,11 +242,13 @@ p{
    background: #320505;
    margin-left: 20px;
    cursor:pointer;
+   position: relative;
 }
 #ups{
     display: none;
     position: relative;
     margin-top: 20%;
+    position: relative;
 
 }
 
