--- a/css/css.css
+++ b/css/css.css
@@ -1,12 +1,13 @@
 
 
 header{
-    color:#7d1313; 
+    color:#938c8c; 
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: xx-large;
     margin-left: 90%;
     position: fixed;
-    font-weight: bolder;    
+    font-weight: bolder;  
+    margin-top: 1%;  
 }
 
 #fondo{
@@ -45,7 +46,7 @@ h3{
 input{
     text-align: center;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    background-color: rgb(226, 208, 209);
+    background-color: rgb(181, 177, 178);
     font-size: xx-large;
     border-radius: 15px;
     margin-top: 2%;
@@ -55,11 +56,12 @@ input{
     position: relative;
 }
 
+
 #irapantalla2{
     display: flex;
     text-align: center;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    background-color: rgb(226, 208, 209);
+    background-color: rgb(181, 177, 178);
     font-size: xx-large;
     color:black; 
     margin-top: 5%;
@@ -73,6 +75,9 @@ input{
     margin-top: 0%;
     padding-top: 0%;
     display: none;
+    background-image: url(../multimedia/fondo-tenebroso2.jpg);
+    background-repeat: no-repeat;
+    
   }
 
 #fondo2 {
@@ -82,11 +87,22 @@ input{
 } 
 
 #bombita{
-    margin-top: 12%;
+    margin-top: 1%;
     width: 2.5%;
-    margin-left: 0.5%;
+    margin-left: 3%;
     position: relative;
 }
+
+#cantbombas{
+    color:#938c8c;  
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-size: xx-large;
+    width: 30%;
+    margin-left: 3%;
+    
+  
+}
+
 
 
 #contenedor-de-tiempo{
@@ -265,7 +281,7 @@ p{
    }
 
 #looser{
-    width: 40%;
+    width: 36%;
     margin-top: 2%;
     margin-left: 30%;
     margin-bottom: 1%;
