--- a/css/css.css
+++ b/css/css.css
@@ -1,4 +1,10 @@
-
+#pantalla1{
+    background-image: url(../multimedia/fondo-tenebroso.png);
+    background-position: 100%;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+}
 
 header{
     color:#938c8c; 
@@ -8,19 +14,12 @@ header{
     position: fixed;
     font-weight: bolder;  
     margin-top: 1%;  
-}
-
-#fondo{
- background-position: 100%;
- height: 100%;
- width: 100%;
- position: absolute;
-
+    padding-right: 2%;
 }
 
 #titulo{
-  width: 50%;
-  margin-left: 25%;
+  width: 60%;
+  margin-left: 21%;
   margin-top: 5%;
   position: relative;
 }
@@ -31,6 +30,7 @@ h2{
     color:white; 
     font-size: xx-large;
     position: relative;
+    margin-bottom: 2%;
     
 }
 
@@ -49,7 +49,7 @@ input{
     background-color: rgb(181, 177, 178);
     font-size: xx-large;
     border-radius: 15px;
-    margin-top: 2%;
+    margin-top: 4%;
     margin-left: 38%;
     cursor: pointer;
     color:black; 
@@ -80,11 +80,6 @@ input{
     
   }
 
-#fondo2 {
-    width: 100%;
-    height: auto;
-    position: absolute;
-} 
 
 #bombita{
     margin-top: 1%;
@@ -100,10 +95,7 @@ input{
     width: 30%;
     margin-left: 3%;
     
-  
 }
-
-
 
 #contenedor-de-tiempo{
     display: flex;
@@ -169,7 +161,6 @@ p{
     position: relative;
    
 }
-
 
 
 #cable1{
@@ -282,7 +273,7 @@ p{
 
 #looser{
     width: 36%;
-    margin-top: 2%;
+    margin-top: 0%;
     margin-left: 30%;
     margin-bottom: 1%;
 
@@ -291,13 +282,13 @@ p{
 #rip{
     width: 60%;
     margin-top: 2%;
-    margin-left: 21%;
+    margin-left: 18%;
     margin-bottom: 5%;
 }
 
 #jugardenuevol{
     font-size: xx-large;
-    width: 30%;
+    width: 28%;
     margin-left: 35%;
     cursor: pointer;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
