--- a/css/css.css
+++ b/css/css.css
@@ -59,9 +59,11 @@ input{
     text-align: center;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     background-color: rgb(181, 177, 178);
+    background-color: rgb(226, 208, 209);
     font-size: xx-large;
     border-radius: 15px;
     margin-top: 4%;
+    margin-top: 2%;
     margin-left: 38%;
     cursor: pointer;
     color:black; 
@@ -74,6 +76,7 @@ input{
     text-align: center;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     background-color: rgb(181, 177, 178);
+    background-color: rgb(226, 208, 209);
     font-size: xx-large;
     color:black; 
     margin-top: 5%;
