--- a/css/css.css
+++ b/css/css.css
@@ -1,14 +1,10 @@
 
 header{
-    color:#938c8c; 
     color:#7d1313; 
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: xx-large;
     margin-left: 90%;
     position: fixed;
-    font-weight: bolder;  
-    margin-top: 1%;  
-    padding-right: 2%;
     font-weight: bolder;    
 }
 
@@ -21,8 +17,6 @@ header{
 }
 
 #titulo{
-  width: 60%;
-  margin-left: 21%;
   width: 50%;
   margin-left: 25%;
   margin-top: 5%;
@@ -35,7 +29,6 @@ h2{
     color:white; 
     font-size: xx-large;
     position: relative;
-    margin-bottom: 2%;
     
 }
 
@@ -51,11 +44,9 @@ h3{
 input{
     text-align: center;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    background-color: rgb(181, 177, 178);
     background-color: rgb(226, 208, 209);
     font-size: xx-large;
     border-radius: 15px;
-    margin-top: 4%;
     margin-top: 2%;
     margin-left: 38%;
     cursor: pointer;
@@ -63,12 +54,10 @@ input{
     position: relative;
 }
 
-
 #irapantalla2{
     display: flex;
     text-align: center;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    background-color: rgb(181, 177, 178);
     background-color: rgb(226, 208, 209);
     font-size: xx-large;
     color:black; 
@@ -83,27 +72,19 @@ input{
     margin-top: 0%;
     padding-top: 0%;
     display: none;
-    background-image: url(../multimedia/fondo-tenebroso2.jpg);
-    background-repeat: no-repeat;
-    
-  }
+}
 
+#fondo2 {
+    width: 100%;
+    height: auto;
+} 
 
 #bombita{
-    margin-top: 1%;
+    margin-top: 12%;
     width: 2.5%;
-    margin-left: 3%;
-    position: relative;
+    margin-left: 0.5%;
 }
 
-#cantbombas{
-    color:#938c8c;  
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    font-size: xx-large;
-    width: 30%;
-    margin-left: 3%;
-    
-}
 
 #contenedor-de-tiempo{
     display: flex;
@@ -111,7 +92,6 @@ input{
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: xx-large;
     color:#7d1313; 
-    position: relative;
    
    
 }
@@ -121,7 +101,6 @@ input{
     margin-top: 1.5%;
    font-weight: bolder;
    color:#7d1313; 
-   position: relative;
 
 }
 
@@ -135,7 +114,6 @@ input{
     color:#7d1313; 
     margin-left: 4%;
     cursor: pointer;
-    position: relative;
 
 }
 
@@ -145,37 +123,27 @@ input{
     font-size: xx-large;
     color:#7d1313; 
     margin-left: 32%;
-    position: relative;
 }
 
 #bombadetiempo{
     margin-left: 28%;
     width: 40%;
-    position: relative;
 }
+
+
 p{
     text-align: left;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     color:#7d1313; 
     font-size: x-large;
     margin-top: 20%;
-    position: relative;
 }
 
 .contenedorcables{
     margin-top: 0%;
     margin-left: 36%;
     display: flex;
-    position: relative;
    
-}
-
-#ups{
-    display: none;
-    position: absolute;
-    top: 500px;
-    margin-left: 2%;
-
 }
 
 #cable1{
@@ -183,7 +151,6 @@ p{
     width: 25px;
    background: brown;
    cursor:pointer;
-   position: relative;
 }
 
 #cable2{
@@ -192,7 +159,6 @@ p{
    background: rgb(131, 46, 46);
    margin-left: 20px;
    cursor:pointer;
-   position: relative;
 }
 
 #cable3{
@@ -201,7 +167,6 @@ p{
    background: rgb(177, 105, 105);
    margin-left: 20px;
    cursor:pointer;
-   position: relative;
 }
 
 #cable4{
@@ -210,7 +175,6 @@ p{
    background: rgb(57, 4, 4);
    margin-left: 20px;
    cursor:pointer;
-   position: relative;
 }
 
 #cable5{
@@ -219,7 +183,6 @@ p{
    background: rgb(219, 73, 73);
    margin-left: 20px;
    cursor:pointer;
-   position: relative;
 }
 
 #cable6{
@@ -228,7 +191,6 @@ p{
    background: rgb(182, 3, 3);
    margin-left: 20px;
    cursor:pointer;
-   position: relative;
 }
 
 #cable7{
@@ -237,7 +199,6 @@ p{
    background: rgb(74, 35, 35);
    margin-left: 20px;
    cursor:pointer;
-   position: relative;
 }
 
 #cable8{
@@ -246,7 +207,6 @@ p{
    background: rgb(170, 94, 94);
    margin-left: 20px;
    cursor:pointer;
-   position: relative;
 }
 
 #cable9{
@@ -255,22 +215,21 @@ p{
    background: #a52a2a;
    margin-left: 20px;
    cursor:pointer;
-   position: relative;
 }
 
-#cable0{
+#cable10{
     height: 300px;
     width: 25px;
    background: #320505;
-   margin-right: 20px;
+   margin-left: 20px;
    cursor:pointer;
-   position: relative;
 }
-
+#ups{
+    display: none;
+}
 
 #pantalla3{
     display: none;
-    
 }
 
 #fondo2{
@@ -282,8 +241,8 @@ p{
    }
 
 #looser{
-    width: 36%;
-    margin-top: 0%;
+    width: 40%;
+    margin-top: 2%;
     margin-left: 30%;
     margin-bottom: 1%;
 
@@ -292,13 +251,13 @@ p{
 #rip{
     width: 60%;
     margin-top: 2%;
-    margin-left: 18%;
+    margin-left: 21%;
     margin-bottom: 5%;
 }
 
 #jugardenuevol{
     font-size: xx-large;
-    width: 28%;
+    width: 30%;
     margin-left: 35%;
     cursor: pointer;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
@@ -339,12 +298,4 @@ p{
     background-color:lemonchiffon;
     color: #904c15;
     border-color: #904c15;
-}
-
-#audio2{
-    display: block;
-   -webkit-box-orient: inherit;
-   background-color: black;
-   color: aliceblue;
-   width: 5%;
 }
