--- a/css/css.css
+++ b/css/css.css
@@ -6,6 +6,11 @@
     position: absolute;
 }
 
+#audios{
+margin-left: 1%;
+margin-top: 2%;
+}
+
 header{
     color:#938c8c; 
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
@@ -167,6 +172,7 @@ p{
     position: absolute;
     top: 500px;
     margin-left: 2%;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 
 }
 
