--- a/css/css.css
+++ b/css/css.css
@@ -8,23 +8,21 @@
 
 #audios{
 margin-left: 1%;
-margin-top: 2%;
+margin-top: 6%;
 }
 
 header{
-    color:#938c8c; 
+    color:#878484; 
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: xx-large;
     margin-left: 90%;
     position: fixed;
-    font-weight: bolder;  
-    margin-top: 1%;  
-    padding-right: 2%;
+    font-weight: bolder;    
 }
 
 #titulo{
-  width: 60%;
-  margin-left: 21%;
+  width: 50%;
+  margin-left: 25%;
   margin-top: 5%;
   position: relative;
 }
@@ -35,7 +33,6 @@ h2{
     color:white; 
     font-size: xx-large;
     position: relative;
-    margin-bottom: 2%;
     
 }
 
@@ -51,24 +48,24 @@ h3{
 input{
     text-align: center;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    background-color: rgb(181, 177, 178);
+    background-color: rgb(56, 54, 54);
     font-size: xx-large;
     border-radius: 15px;
-    margin-top: 4%;
+    margin-top: 2%;
     margin-left: 38%;
     cursor: pointer;
-    color:black; 
+    color:rgb(255, 255, 255); 
     position: relative;
+    
 }
-
 
 #irapantalla2{
     display: flex;
     text-align: center;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    background-color: rgb(181, 177, 178);
+    background-color:  rgb(126, 121, 121);
     font-size: xx-large;
-    color:black; 
+    color:rgb(255, 253, 253); 
     margin-top: 5%;
     margin-left: 45%;
     border-radius: 15px;
@@ -77,30 +74,26 @@ input{
 }
 
 #pantalla2{
-    margin-top: 0%;
-    padding-top: 0%;
-    display: none;
     background-image: url(../multimedia/fondo-tenebroso2.jpg);
-    background-repeat: no-repeat;
-    
-  }
-
+    background-position: 100%;
+    height: 100%;
+    width: 100%;
+    display: none;
+}
 
 #bombita{
-    margin-top: 1%;
+    margin-top: 12%;
     width: 2.5%;
-    margin-left: 3%;
-    position: relative;
+    margin-left: 0.5%;
 }
 
 #cantbombas{
-    color:#938c8c;  
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: xx-large;
-    width: 30%;
-    margin-left: 3%;
-    
+
+
 }
+
 
 #contenedor-de-tiempo{
     display: flex;
@@ -108,7 +101,6 @@ input{
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: xx-large;
     color:#7d1313; 
-    position: relative;
    
    
 }
@@ -118,7 +110,6 @@ input{
     margin-top: 1.5%;
    font-weight: bolder;
    color:#7d1313; 
-   position: relative;
 
 }
 
@@ -132,7 +123,6 @@ input{
     color:#7d1313; 
     margin-left: 4%;
     cursor: pointer;
-    position: relative;
 
 }
 
@@ -142,28 +132,26 @@ input{
     font-size: xx-large;
     color:#7d1313; 
     margin-left: 32%;
-    position: relative;
 }
 
 #bombadetiempo{
     margin-left: 28%;
     width: 40%;
-    position: relative;
 }
+
+
 p{
     text-align: left;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     color:#7d1313; 
     font-size: x-large;
     margin-top: 20%;
-    position: relative;
 }
 
 .contenedorcables{
     margin-top: 0%;
     margin-left: 36%;
     display: flex;
-    position: relative;
    
 }
 
@@ -181,7 +169,6 @@ p{
     width: 25px;
    background: brown;
    cursor:pointer;
-   position: relative;
 }
 
 #cable2{
@@ -190,7 +177,6 @@ p{
    background: rgb(131, 46, 46);
    margin-left: 20px;
    cursor:pointer;
-   position: relative;
 }
 
 #cable3{
@@ -199,7 +185,6 @@ p{
    background: rgb(177, 105, 105);
    margin-left: 20px;
    cursor:pointer;
-   position: relative;
 }
 
 #cable4{
@@ -208,7 +193,6 @@ p{
    background: rgb(57, 4, 4);
    margin-left: 20px;
    cursor:pointer;
-   position: relative;
 }
 
 #cable5{
@@ -217,7 +201,6 @@ p{
    background: rgb(219, 73, 73);
    margin-left: 20px;
    cursor:pointer;
-   position: relative;
 }
 
 #cable6{
@@ -226,7 +209,6 @@ p{
    background: rgb(182, 3, 3);
    margin-left: 20px;
    cursor:pointer;
-   position: relative;
 }
 
 #cable7{
@@ -235,7 +217,6 @@ p{
    background: rgb(74, 35, 35);
    margin-left: 20px;
    cursor:pointer;
-   position: relative;
 }
 
 #cable8{
@@ -244,7 +225,6 @@ p{
    background: rgb(170, 94, 94);
    margin-left: 20px;
    cursor:pointer;
-   position: relative;
 }
 
 #cable9{
@@ -253,35 +233,26 @@ p{
    background: #a52a2a;
    margin-left: 20px;
    cursor:pointer;
-   position: relative;
 }
 
-#cable0{
+#cable10{
     height: 300px;
     width: 25px;
    background: #320505;
-   margin-right: 20px;
+   margin-left: 20px;
    cursor:pointer;
-   position: relative;
 }
-
+#ups{
+    display: none;
+}
 
 #pantalla3{
     display: none;
-    
 }
 
-#fondo2{
-    background-position: 100%;
-    height: 100%;
-    width: 100%;
-    position: absolute;
-   
-   }
-
 #looser{
-    width: 36%;
-    margin-top: 0%;
+    width: 40%;
+    margin-top: 2%;
     margin-left: 30%;
     margin-bottom: 1%;
 
@@ -290,13 +261,13 @@ p{
 #rip{
     width: 60%;
     margin-top: 2%;
-    margin-left: 18%;
+    margin-left: 21%;
     margin-bottom: 5%;
 }
 
 #jugardenuevol{
     font-size: xx-large;
-    width: 28%;
+    width: 30%;
     margin-left: 35%;
     cursor: pointer;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
@@ -337,12 +308,4 @@ p{
     background-color:lemonchiffon;
     color: #904c15;
     border-color: #904c15;
-}
-
-#audio2{
-    display: block;
-   -webkit-box-orient: inherit;
-   background-color: black;
-   color: aliceblue;
-   width: 5%;
 }
