--- a/css/css.css
+++ b/css/css.css
@@ -4,6 +4,7 @@
     height: 100%;
     width: 100%;
     position: absolute;
+    background-repeat: no-repeat;
 }
 
 #audios{
@@ -17,7 +18,10 @@ header{
     font-size: xx-large;
     margin-left: 90%;
     position: fixed;
-    font-weight: bolder;    
+    font-weight: bolder; 
+    margin-right: 6%;   
+    margin-top: 1%;
+   
 }
 
 #titulo{
@@ -79,18 +83,25 @@ input{
     height: 100%;
     width: 100%;
     display: none;
+    background-repeat: no-repeat;
+    background-size:cover;
 }
 
 #bombita{
-    margin-top: 12%;
-    width: 2.5%;
-    margin-left: 0.5%;
+    margin-top: 6%;
+    width: 3%;
+    margin-left: 2%;
+    position: relative;
 }
 
 #cantbombas{
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: xx-large;
     color: #878484;
+    margin-top: 0%;
+    width: 3%;
+    margin-left: 2%;
+    position: relative;
 
 
 }
@@ -102,6 +113,7 @@ input{
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: xx-large;
     color:#7d1313; 
+    margin-top: -150px;
    
    
 }
@@ -150,9 +162,11 @@ p{
 }
 
 .contenedorcables{
-    margin-top: 0%;
+    margin-top: -100px;
     margin-left: 36%;
     display: flex;
+    position: relative;
+    padding-bottom: 20%;
    
 }
 
@@ -169,7 +183,7 @@ p{
     height: 300px;
     width: 25px;
    background: brown;
-   cursor:pointer;
+   cursor: url(../multimedia/tijeras.png), auto;
 }
 
 #cable2{
@@ -177,7 +191,8 @@ p{
     width: 25px;
    background: rgb(131, 46, 46);
    margin-left: 20px;
-   cursor:pointer;
+   cursor: url(../multimedia/tijeras.png), auto;
+   
 }
 
 #cable3{
@@ -185,7 +200,7 @@ p{
     width: 25px;
    background: rgb(177, 105, 105);
    margin-left: 20px;
-   cursor:pointer;
+   cursor: url(../multimedia/tijeras.png), auto;
 }
 
 #cable4{
@@ -193,7 +208,7 @@ p{
     width: 25px;
    background: rgb(57, 4, 4);
    margin-left: 20px;
-   cursor:pointer;
+   cursor: url(../multimedia/tijeras.png), auto;
 }
 
 #cable5{
@@ -201,7 +216,7 @@ p{
     width: 25px;
    background: rgb(219, 73, 73);
    margin-left: 20px;
-   cursor:pointer;
+   cursor: url(../multimedia/tijeras.png), auto;
 }
 
 #cable6{
@@ -209,7 +224,7 @@ p{
     width: 25px;
    background: rgb(182, 3, 3);
    margin-left: 20px;
-   cursor:pointer;
+   cursor: url(../multimedia/tijeras.png), auto;
 }
 
 #cable7{
@@ -217,7 +232,7 @@ p{
     width: 25px;
    background: rgb(74, 35, 35);
    margin-left: 20px;
-   cursor:pointer;
+   cursor: url(../multimedia/tijeras.png), auto;
 }
 
 #cable8{
@@ -225,7 +240,7 @@ p{
     width: 25px;
    background: rgb(170, 94, 94);
    margin-left: 20px;
-   cursor:pointer;
+   cursor: url(../multimedia/tijeras.png), auto;
 }
 
 #cable9{
@@ -233,7 +248,7 @@ p{
     width: 25px;
    background: #a52a2a;
    margin-left: 20px;
-   cursor:pointer;
+   cursor: url(../multimedia/tijeras.png), auto;
 }
 
 #cable0{
@@ -241,7 +256,7 @@ p{
     width: 25px;
    background: #320505;
    margin-right: 20px;
-   cursor:pointer;
+   cursor: url(../multimedia/tijeras.png), auto;
 }
 #ups{
     display: none;
