--- a/css/css.css
+++ b/css/css.css
@@ -128,14 +128,17 @@ input{
 
 #activarbomba{
     width: 10%;
-    border-radius: 70px;
-    background-color: rgb(226, 208, 209);
+    height: 2%;
+    border-radius: 15px;
+    background-color: rgb(168, 167, 167);
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    font-size: large;
+    font-size: x-large;
     font-weight: bolder;
-    color:#7d1313; 
+    color:#7d1313;; 
     margin-left: 4%;
     cursor: pointer;
+    margin-top: 1%;
+   
 
 }
 
@@ -163,7 +166,7 @@ p{
 
 .contenedorcables{
     margin-top: -100px;
-    margin-left: 36%;
+    margin-left: 35%;
     display: flex;
     position: relative;
     padding-bottom: 20%;
@@ -276,7 +279,7 @@ p{
 
 #rip{
     width: 60%;
-    margin-top: 2%;
+    margin-top: 0%;
     margin-left: 21%;
     margin-bottom: 5%;
 }
